-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v0.23 - Jan 24, 2017

 + GUI: save/load current playlist on exit/start ("autosave_playlists" config setting)
 + MPEG stream copy: copy ID3 tags
 * MPEG: use separate filters mpeg.in and mpeg.decode
 * MPEG: ID3v2.3 parse: support extended header
 * MPEG: ID3v2.4 parse: support 'data length indicator'
 + plist.dir: expand sub-directories
 * core: move soxr convertor to a separate module
   fmedia can run without any 3rd-party libraries.  Remove all unneeded modules from fmedia.conf if you need a tiny package with core functions only.
 * fmedia can be built for i686 CPU without 3rd-party libraries


fmedia v0.22 - Dec 25, 2016

 + WASAPI: support loopback mode (record from playback)
 + fmedia: add "--dev-loopback" argument
 + core: support reading from stdin (@stdin.EXT) (WAV) (synchronous)
 + core: support writing to stdout (--out=@stdout.EXT) (WAV, FLAC, OGG)
 *! fmedia: --outdir argument was removed.  Use --out instead.

 + GUI: new command "Filter" to search/filter tracks in playlist
 + GUI: global hotkeys can be assigned to fmedia commands ("global_hotkeys" setting in fmedia.conf)
 + GUI: show icon in tray while recording ("status_tray" config setting)
 * GUI: record: support "Stop after" setting
 * GUI: record: add "Capture Device Number" setting
 * GUI: Open/Add modal dialog doesn't block main thread
 - GUI: recording: correctly update GUI if recording was finished with an error

 * WAV: support "data" chunk with unknown size
 - WavPack: APE tags weren't recognized
 - MPEG read: unknown ID3v2 tags were skipped
 - MPEG read: segfault on unknown APE tag
 - WASAPI playback: the first block of mono audio data was skipped

 + conf: support "include" keyword to include additional configuration files
   User settings may be stored in fmedia-user.conf